# Bayesian-Surveillance-Evasion

./: .gitignore  README.md
code/: accurate_optimal_integrated_K.m  fastMarching.cpp  fmm_test.m  gp_prediction.m  integrated_K.m  intensity_setup.m  kernel_setup.m  learning_K_gp.m  learning_K_pwc.m  locate_acceptable_cells.m  log_marginal_likelihood.m  optimal_integrated_K.m  piecewise_constant_cost.m  piecewise_constant_cost_xy.m  simluate_capture.m  ucb_update_pwc_K.m
code/Discrete_RL/: CMakeLists.txt
code/Discrete_RL/include/: DijkstraGrid.h  DijkstraPathTracer.h  EvaderGrid.h  Grid.h  MinHeap.h  UCTGrid.h  analyticFunctions.h  saveOutput.h  specialConstants.h
code/Discrete_RL/plots/: graph_algorithm.ipynb
code/Discrete_RL/src/: CMakeLists.txt  DijkstraGrid.cpp  DijkstraPathTracer.cpp  EvaderGrid.cpp  Grid.cpp  MinHeap.cpp  UCTGrid.cpp
code/Discrete_RL/test/: CMakeLists.txt  main.cpp
code/include/: InitialCondition.h  Main.h  MinHeap.h  OptimalPath.h  ReEvaluateNeighbor.h  SpeedFunction.h  fastMarching.h  updateNeighbor.h  zeroBoundary.h
docs/: index.html  limits.html  refine.html
